--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
     <script src="js/PlayerArrow.js"></script>
     <script src="js/ComputerArrow.js"></script>
+
+    <script src="./lib/p5.gif.min.js"></script>
+
+
   </head>
   <body>
     <script src="sketch.js"></script>
